--- a/LANGCHAIN_RAG_LNCB.ipynb
+++ b/LANGCHAIN_RAG_LNCB.ipynb
@@ -322,7 +322,7 @@
     "    SystemMessage(content=\"\"\"You are a Helpful AI Bot. \n",
     "    You take the question related to Context from user and answer if you have the specific information related to the question.\"\"\"),\n",
     "    # Human Message Prompt Template\n",
-    "    HumanMessagePromptTemplate.from_template(\"\"\"Aswer the question based on the given context.\n",
+    "    HumanMessagePromptTemplate.from_template(\"\"\"Answer the question based on the given context.\n",
     "    Context:\n",
     "    {context}\n",
     "    \n",
